// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switchButtonField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_m5izgx1 uv_m5izgx0"
        >
          <div
            class="uv_m5izgx4 uv_m5izgx3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52u3v uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            data-checked="false"
            data-disabled="false"
            data-testid="switch-button-left"
            data-type="radio"
            role="button"
            style="--uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
            tabindex="0"
          >
            <div
              class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div
                aria-disabled="false"
                class="uv_475tndd uv_17da2jl3"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="uv_17da2jl6"
                  id="_r_2_"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="left"
                />
                <svg
                  class="uv_17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="uv_17da2jl0"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="uv_17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  for="_r_2_"
                >
                  Left
                </label>
              </div>
            </div>
          </div>
          <div
            class="uv_m5izgx4 uv_m5izgx3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52u3v uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            data-checked="false"
            data-disabled="false"
            data-testid="switch-button-right"
            data-type="radio"
            role="button"
            style="--uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
            tabindex="0"
          >
            <div
              class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div
                aria-disabled="false"
                class="uv_475tndd uv_17da2jl3"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="uv_17da2jl6"
                  id="_r_6_"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="right"
                />
                <svg
                  class="uv_17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="uv_17da2jl0"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="uv_17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  for="_r_6_"
                >
                  Right
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`switchButtonField > should works with defaultValues 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_m5izgx1 uv_m5izgx0"
        >
          <div
            class="uv_m5izgx4 uv_m5izgx3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52u3v uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            data-checked="false"
            data-disabled="false"
            data-testid="switch-button-left"
            data-type="radio"
            role="button"
            style="--uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
            tabindex="0"
          >
            <div
              class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div
                aria-disabled="false"
                class="uv_475tndd uv_17da2jl3"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="uv_17da2jl6"
                  id="_r_b_"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="left"
                />
                <svg
                  class="uv_17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="uv_17da2jl0"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="uv_17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  for="_r_b_"
                >
                  Left
                </label>
              </div>
            </div>
          </div>
          <div
            class="uv_m5izgx4 uv_m5izgx3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52u3v uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            data-checked="false"
            data-disabled="false"
            data-testid="switch-button-right"
            data-type="radio"
            role="button"
            style="--uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
            tabindex="0"
          >
            <div
              class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div
                aria-disabled="false"
                class="uv_475tndd uv_17da2jl3"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="uv_17da2jl6"
                  id="_r_f_"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="right"
                />
                <svg
                  class="uv_17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="uv_17da2jl0"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="uv_17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  for="_r_f_"
                >
                  Right
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      ,
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
